--- a/thesis/settings.tex
+++ b/thesis/settings.tex
@@ -59,6 +59,9 @@
 % special symbols e.g. squares
 \usepackage{amssymb}
 
+% code coloring
+\usepackage[dvipsnames]{xcolor} % must be declared before pgfplots, tikz or pstricks package, otherwise it will not work.
+
 %% plotting
 \usepackage{pgfplots}
 \usepgfplotslibrary{fillbetween}
@@ -66,8 +69,6 @@
 %%Settings for code
 % code placement right there
 \usepackage{float}
-% code coloring
-\usepackage{xcolor}
 % code listing
 \usepackage{listings}
 
@@ -99,24 +100,46 @@
     identifierstyle=\color[RGB]{0,0,192},
     stringstyle=\color[RGB]{42,0,255},
     commentstyle=\color[RGB]{63,127,95},
+    aboveskip=1em,
+    belowskip=1em,
+}
+
+\lstdefinestyle{standard} {
+	captionpos=b,
+	basicstyle=\ttfamily\footnotesize,
+	numbers=left,
+	numberstyle=\small,
+	showstringspaces=false,
+	tabsize=4,
+	frame=single,
+	breaklines=true,
+	aboveskip=1em,
+	belowskip=1em,
 }
 
 % If no highlighting is intended
 \lstdefinestyle{plain}{
 	basicstyle=\ttfamily\footnotesize,
+	aboveskip=1em,
+	belowskip=1em,
 }
 
-\lstdefinestyle{cmd}
-{
-	basicstyle=\ttfamily\footnotesize,
-	captionpos=b,
-	language=bash,
-	otherkeywords={final},
-	numbers=left,
-	numberstyle=\small,
-	showstringspaces=false,
-	frame=single,
-	breaklines=true,
+%
+\lstdefinelanguage{Kotlin}{
+	comment=[l]{//},
+	commentstyle={\color{gray}\ttfamily},
+	emph={filter, first, firstOrNull, forEach, lazy, map, mapNotNull, println},
+	emphstyle={\color{OrangeRed}},
+	identifierstyle=\color{black},
+	keywords={!in, !is, abstract, actual, annotation, as, as?, break, by, catch, class, companion, const, constructor, continue, crossinline, data, delegate, do, dynamic, else, enum, expect, external, false, field, file, final, finally, for, fun, get, if, import, in, infix, init, inline, inner, interface, internal, is, lateinit, noinline, null, object, open, operator, out, override, package, param, private, property, protected, public, receiveris, reified, return, return@, sealed, set, setparam, super, suspend, tailrec, this, throw, true, try, typealias, typeof, val, var, vararg, when, where, while},
+	keywordstyle={\color{NavyBlue}\bfseries},
+	morecomment=[s]{/*}{*/},
+	morestring=[b]",
+	morestring=[s]{"""*}{*"""},
+	ndkeywords={@Deprecated, @JvmField, @JvmName, @JvmOverloads, @JvmStatic, @JvmSynthetic, Array, Byte, Double, Float, Int, Integer, Iterable, Long, Runnable, Short, String},
+	ndkeywordstyle={\color{BurntOrange}\bfseries},
+	sensitive=true,
+	stringstyle={\color{ForestGreen}\ttfamily},
 }
 
 % fancy algorithms (see template)
